--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -172,3 +171,6 @@ cython_debug/
 
 # VSCODE
 .vscode
+
+dataset_files
+figs
